@startuml
!theme vibrant
title 주문 도메인 엔티티

package "주문 관리" {
    class Order {
        + Long id
        + LocalDateTime orderDate
        + String status
    }

    class OrderDetail {
        + Long id
        + Integer quantity
        + BigDecimal price
    }
}

package "사용자 관리" {
    class User {
        + Long id
        ..
    }
}

package "상품 카탈로그" {
    class Product {
        + Integer productId
        ..
    }
}


' === Relationships ===
User "1" -- "N" Order
Order "1" -- "N" OrderDetail
Product "1" -- "N" OrderDetail

@enduml
